Fix overflow problem in SF Buses page, alerts

--- a/Transcyclopedia/sanfrancisco/bus/css_assets/sf_buses.css
+++ b/Transcyclopedia/sanfrancisco/bus/css_assets/sf_buses.css
@@ -300,6 +300,10 @@ body::after {
     right: 3px;
 }
 
+#alerts {
+    overflow-y: auto;
+}
+
 .alerts_stop_bus {
     width: 100%;
     margin-top: 0;
